# schemainspect

./: pyproject.toml
schemainspect/pg/: obj.py
