[tool.poetry]
name = "schemainspect"
version = "3.1.967"
authors = ["Robert Lechte <robertlechte@gmail.com>", "htsang-qontigo <htsang@qontigo.com>"]
license = ""
readme = "README.md"
description = "Schema inspection for PostgreSQL (and possibly others)"

repository = "https://github.com/htsang-qontigo/schemainspect"
homepage = ""

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
sqlbag = ">=0.1.1616028516"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "5.10.1"
migra = "*"
black = "22.3.0"
toml = "*"

[tool.poetry.scripts]
schemainspect = 'schemainspect:do_command'

[tool.isort]
profile = "black"
